[package]
name = "tui-react"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
crossterm = { version = "*", features = ["event-stream"] }
async-stream = ">= 0.3"
futures = ">= 0.3"
tokio = { version = "*", features = ["full"] }
